feat: implement static analysis for Solidity contracts using Slither
TODO: Fix slither ouput and version spec
